--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.1.9 (Build 2020050200)
+-fixed up version number trouble
+-set proper defaults on fields
+
 1.1.7 (Build 20200425000)
 -Added grading
 
