--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.2.3 (Build 2020073100)
+-Added support for non alphabet distractors on keyboard
+-Fixed Postgresql support issue in grading
+-Added new practice type Listen-Choose
+
 1.2.2 (Build 2020071700)
 - fixed some poor ID and CSS declarations that were not scoped
 - added clearer instructions and help icons to form fields
