--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+
+
+1.2.4 (Build 2020091300)
+-Added white text outline on card fronts
+-Fixed issue with images and audio uploads not beong removed
+-Fixed issue with caching of playback audio
+-fixed issue with TTS being used when uploaded audio was available
+
 1.2.3 (Build 2020073100)
 -Added support for non alphabet distractors on keyboard
 -Fixed Postgresql support issue in grading
