--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+1.2.7 (Build 2020111000)
+-Adding in TT Recorder
+
+1.2.6 (Build 2020110900)
+-Adding in model sentence and model sentence audio
+
 1.2.5 (Build 2020100200)
 -Adding in missing DB updates not applied in July
 
