--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.1 (Build 2020121900)
+- Improved import form so that TTS voice and model sentence can be imported
+- Made widths of form fields better
+
 1.3.0 (Build 2020121100)
 -Added a proper flashcards mode
 
