--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.2 (Build 2020122500)
+- Fixed bug which prevented students "check"ing a definition
+
 1.3.1 (Build 2020121900)
 - Improved import form so that TTS voice and model sentence can be imported
 - Made widths of form fields better
