--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.5 (Build 2021030100)
+-Added mecab based comparison for Japanese text
+-Added setup tab
+
 1.3.4 (Build 2021013100)
  -Improved differencing
  -Standardized audio recorder
