--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.7 Build (2021052000)
+- Added Bahrain and Capetown regions
+
 1.3.6 (Build 2021040100)
 -tab and form changes
 -added better lang string for import
