--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.8 (Build 2021052500)
+- Added ability to view reports by group
+
 1.3.7 Build (2021052000)
 - Added Bahrain and Capetown regions
 
