--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.12 (Build 2021083100)
+- Added ability to hide image on flip cards screen
+- Added ability to set front and back face of flip cards
+
 1.3.11 (Build 2021081600)
 - issue with php 8 and array key exists
 
