--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.13 (Build 2021090700)
+- Fixed bug "too few arguments" in speech cards introduced in 1.3.12
+
 1.3.12 (Build 2021083100)
 - Added ability to hide image on flip cards screen
 - Added ability to set front and back face of flip cards
