--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
+
+1.3.15 (Build 2021112100)
+- Fixed browser speech recognition on Safari
+
 1.3.14 (Build 2021110500)
-- Fixed grading bug where nopractice stages could be counted in grade
+- Fixed grading bug where steps with none specified as activity type could be counted in grade
 - Added ability to use Poodll STT exclusively
+- Added a re push grades button to reports page
 
 1.3.13 (Build 2021090700)
 - Fixed bug "too few arguments" in speech cards introduced in 1.3.12
