--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.16 (Build 2021120200)
+- Improved navigation between steps
+- Added Cancel attempt ability
 
 1.3.15 (Build 2021112100)
 - Fixed browser speech recognition on Safari
