--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.18 (Build 2022012000)
+- Fixed issue with incorrect name/id for Korean Polly voice Seoyeon
+- Stopped review mode from pulling items from current mod
+
 1.3.17 (Build 2021122200)
 - added credential fetching
 
