--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.21 (Build 2022021500)
+- Added Journey mode (setting only)
+
 1.3.20 (Build 2022020800)
 - Added open and close dates (Kuldeep Banga)
 
