--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.22 (Build 2022022300)
+- Fixed issue which prevented more than 40 results showing in the reports
+
 1.3.21 (Build 2022021500)
 - Added Journey mode (setting only)
 
