--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.33 (xxxx)
+- fixed issue in get_course_moduleinfo that could kill backup and restore
+- tweaked polly stuff
+
 1.3.22 (Build 2022022300)
 - Fixed issue which prevented more than 40 results showing in the reports
 
