--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.3.34 (2022031300)
+- tweaked appearance of cards
+- fixed issue with review mode
+- added selection of term/definition for listen-and-choose
+
 1.3.33 (2022022700)
 - fixed issue in get_course_moduleinfo that could kill backup and restore
 - tweaked polly stuff
