--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.35 (Build 2022032800)
+- Fixed issue with review wordpool in Free mode pulling too many words
+- Fixed issue with word wizard not showing
+
 1.3.34 (2022031300)
 - tweaked appearance of cards
 - fixed issue with review mode
