--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.36 (Build 2022041300)
+- Fixed logging issue
+- Added some TTS voices
+
 1.3.35 (Build 2022032800)
 - Fixed issue with review wordpool in Free mode pulling too many words
 - Fixed issue with word wizard not showing
