--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.37(Build 2022041800)
+- Removed JQuery UI which was breaking Moodle 4.0 dock
+
 1.3.36 (Build 2022041300)
 - Fixed logging issue
 - Added some TTS voices
