--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.39 (Build 2022060500)
+- added better free trial link and rebuilt js for Moodle versions prior to M3.8
+- adda default to viewstart and viewend
+
 1.3.38(Build 2022050200)
 - Removed JQuery UI which was breaking Moodle 4.0 dock
 - Fixed issue with activity being closed if open date set, but close data not set
