--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.40 (Build 202207XXXX)
+- fixed web service optional value = > default value
+
 1.3.39 (Build 2022060500)
 - added better free trial link and rebuilt js for Moodle versions prior to M3.8
 - adda default to viewstart and viewend
