--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
-1.3.40 (Build 202207XXXX)
+1.3.40 (Build 2022100700)
+ - removed unneeded lang strings
 - fixed web service optional value = > default value
 
 1.3.39 (Build 2022060500)
