--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.41 (Build 2022112700)
+- added Dutch Belgian and other voices
+
 1.3.40 (Build 2022100700)
  - removed unneeded lang strings
 - fixed web service optional value = > default value
