--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.42 (Build 2022123100)
+ - added support for multilang filter in definitions
+
 1.3.41 (Build 2022112700)
 - added Dutch Belgian and other voices
 
