--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.43 (Build 2023033000)
+- fixed issue with broken animation on speechcards
+
 1.3.42 (Build 2022123100)
  - added support for multilang filter in definitions
 
