--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.44 (Build 2023042301)
+- better dictionary support for word wizard
+
 1.3.43 (Build 2023033000)
 - fixed issue with broken animation on speechcards
 
