fixed some bugs in upgraded db definitions

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.44 (Build 2023051200)
+- fixed incorrect not null setting on deflanguage
+
 1.3.44 (Build 2023042301)
 - better dictionary support for word wizard
 
