--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 1.3.44 (Build 2023051201)
-- fixed incorrect not null setting on deflanguage
+- fixed incorrect not null setting on def language
+- changes to support M4.2
 
 1.3.44 (Build 2023042301)
 - better dictionary support for word wizard
