--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.46 (Build 2023072400)
+- added attempt submitted and step submitted events
+
 1.3.44 (Build 2023051201)
 - fixed incorrect not null setting on def language
 - changes to support M4.2
