--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.48 (Build 2023090900)
+- Fixed an issue with SpaceGame and the number of items in the practice pool
+- Added Learned reports to the reports page
+
 1.3.47 (Build 2023090300)
 - added SpaceGame
 - added VideoExamples
