--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.51 (Build 2023XXXXX)
+- Fixed incorrect language label for zh_tw
+
 1.3.50 (Build 2023101000)
 - Added more languages incl. Maori
 - Better behaviour for languages with no dictionary support
