--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.51 (Build 2023101900)
+ - fix for lang string for zh_tw
+ - fix for broken audio on flip cards
+
 1.3.50 (Build 2023101000)
 - Added more languages incl. Maori
 - Better behaviour for languages with no dictionary support
