--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.3.52 (Build 2023110400)
+ -Fix for broken audio in some locations
+ -Better graphics for SpaceGame
+ -Added a tiny speaker icon to the speech cards
+
 1.3.51 (Build 2023101900)
  - Fixed incorrect language label for zh_tw
  - fix for broken audio on flip cards
