--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.53 (Build 2023111800)
+- Added better planet for space game
+- Added better captions and text for some areas
+
 1.3.52 (Build 2023110400)
  -Fix for broken audio in some locations
  -Better graphics for SpaceGame
