--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.3.54 (Build 2024011800)
+- added course reset for mywords
+- fixed JS loading issue on view page
+- added expected completion data API support
+
 1.3.53 (Build 2023111800)
 - Added better planet for space game
 - Added better captions and text for some areas
