--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.55 (Build 2024020100)
+- Fixed issue where audio button click flipped the card
+- Added remote logging
+
 1.3.54 (Build 2024011800)
 - added course reset for mywords
 - fixed JS loading issue on view page
