--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.56 (Build 202402XXXX)
+- Update to CP usage logging
+
 1.3.55 (Build 2024020100)
 - Fixed issue where audio button click flipped the card
 - Added remote logging
