--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
-1.3.60 (Build 20240405xx)
+cd 1.3.60 (Build 20240405xx)
 - Added missing lang string for export capability
+- Fixed incorrect param for activity page (state instead of nextstep)
 
 1.3.59 (Build 2024031400)
 - Fixed broken import from glossary after confirmation
