--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.63 (Build 2024052600)
+- Fixed broken wordwizard (from last release)
+
 1.3.62 (Build 2024051600)
 - Fixes for external APIS calls in pre M40
 
