--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
--- fixed wrong trim function
+1.3.64 (Build 202406xxxx)
+- fixed wrong trim function
+- added a bit more robustness to prevent superclickers from breaking the audio recorder
+- fixed wrong dialect labels for Arabic voices:  Arabic (modern standard) / Arabic (gulf)
 
 1.3.63 (Build 2024052600)
 - Fixed broken wordwizard (from last release)
