--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.3.67 (Build 2024101500)
+- Added ability to set the practice types available in free mode
+- Added foundations of new "sessions" mode - not yet Enabled
+- Improvements to Privacy API implementation
+
 1.3.67 (Build 2024100700)
 - Fixes for PHP 8.2 and 8.3
 
