--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.3.70 (Build 2024111200)
+- added completion option for all words learned and completion fixes
+- added word learned event
+- added option to use the model sentence on speechcards instead of the term/word
+
 1.3.69 (Build 2024101501)
 - Fix for code warning about session_mode
 
