--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-1.3.70 (Build 2024111203)
+1.3.71 (Build 2024111203)
+- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
+- added a push page to mush settings from one WordCards activities to others with same name, in same course, or site wide.
+
+1.3.70 (Build 2024111200)
 - added completion option for all words learned and completion fixes
 - added word learned event
 - added option to use the model sentence on speechcards instead of the term/word
