--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.72 (Build 2024120700)
+- added support for Moodle Mobile app
+
 1.3.71 (Build 2024111203)
 - added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
 - added a push page to push settings from one WordCards activities to others with same name, or in same course, or site wide.
