Word preview / self select feature

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.73 (Build 2025012500)
+- added word preview mode
+
 1.3.72 (Build 2024120700)
 - added support for Moodle Mobile app
 - randomized cards on definitions page
