--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.75 (Build 2025041800)
+- Support for Moodle 5.0 and PHP 8.4
+- Added support for custom Cloud Poodll server
+
 1.3.74 (Build 2025040400)
 - Added AI image generator. You need to install the Poodll AI placement plugin for this to work. https://github.com/justinhunt/moodle-aiplacement_poodll
 - Fixed for failing add_word button on words admin page
