--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.76 (Build 2025042100)
+- Support for Ningxia region (requires Poodll China subscription)
+
 1.3.75 (Build 2025041800)
 - Support for Moodle 5.0 and PHP 8.4
 - Added support for custom Cloud Poodll server
