--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,6 @@
+1.3.77 (Build 2025050500)
 - support for lang server in Ningxia
+- limited voice options for Ningxia
 
 1.3.76 (Build 2025042100)
 - Support for Ningxia region (requires Poodll China subscription)
