--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.79 (Build 2025070401)
+- fixed totals on course level reporting
+
 1.3.78 (Build 2025070400)
  - course level reporting
  - track self claimed learns
