--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.80 (Build 2025080600)
+- Fixes to word preview and learn mode pool
+- Added AI Image Generation
+
 1.3.79 (Build 2025070401)
 - fixed totals on course level reporting
 
