--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.81 (Build 2025091000)
+- Fixes for activity completion
+- Improvements to AI Image generation
+
 1.3.80 (Build 2025080600)
 - Fixes to word preview and learn mode pool
 - Added AI Image Generation
