- Improvements for new activity chooser (Moodle 5.1)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.3.82 (Build 2025100500)
+- Improvements for new activity chooser (Moodle 5.1)
+
 1.3.81 (Build 2025091000)
 - Fixes for activity completion
 - Improvements to AI Image generation
